--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         <nav>
             <div class="menu">
                 <ul class="nav">
-                    <li><a href="#">Trang chủ</a></li>
+                    <li><a href="index.html">Trang chủ</a></li>
                     <li><a href="#">Danh mục</a></li>
                     <li><a href="#">Sản phẩm</a></li>
                     <li><a href="#">Bình luận</a></li>
@@ -239,21 +239,52 @@
                 </div>
                 <div class="products">
                     <div class="product-card" data-id="1">
-                        <img src="img/iphoneX.jpg" alt="Product 1">
-                        <p>Product 1 </p>
-                        <p class="price">$19.99</p>
+                        <img src="img/iphoneX.jpg" alt="Sản phẩm 1">
+                        <p>Sản phẩm 1</p>
+                        <p class="price">1.000.000 VNĐ</p>
                     </div>
                     <div class="product-card" data-id="2">
-                        <img src="img/iphoneX.jpg" alt="Product 2">
-                        <p>Product 2 </p>
-                        <p class="price">$29.99</p>
+                        <img src="img/iphoneX.jpg" alt="Sản phẩm 2">
+                        <p>Sản phẩm 2</p>
+                        <p class="price">1.000.000 VNĐ</p>
                     </div>
                     <div class="product-card" data-id="3">
-                        <img src="img/iphoneX.jpg" alt="Product 3">
-                        <p>Product 3 </p>
-                        <p class="price">$39.99</p>
+                        <img src="img/iphoneX.jpg" alt="Sản phẩm 3">
+                        <p>Sản phẩm 3</p>
+                        <p class="price">1.000.000 VNĐ</p>
+                    </div>
+                    <div class="product-card" data-id="4">
+                        <img src="img/iphoneX.jpg" alt="Sản phẩm 4">
+                        <p>Sản phẩm 4</p>
+                        <p class="price">1.000.000 VNĐ</p>
+                    </div>
+                    <div class="product-card" data-id="5">
+                        <img src="img/iphoneX.jpg" alt="Sản phẩm 5">
+                        <p>Sản phẩm 5</p>
+                        <p class="price">1.000.000 VNĐ</p>
+                    </div>
+                    <div class="product-card" data-id="6">
+                        <img src="img/iphoneX.jpg" alt="Sản phẩm 6">
+                        <p>Sản phẩm 6</p>
+                        <p class="price">1.000.000 VNĐ</p>
+                    </div>
+                    <div class="product-card" data-id="7">
+                        <img src="img/iphoneX.jpg" alt="Sản phẩm 7">
+                        <p>Sản phẩm 7</p>
+                        <p class="price">1.000.000 VNĐ</p>
+                    </div>
+                    <div class="product-card" data-id="8">
+                        <img src="img/iphoneX.jpg" alt="Sản phẩm 8">
+                        <p>Sản phẩm 8</p>
+                        <p class="price">1.000.000 VNĐ</p>
+                    </div>
+                    <div class="product-card" data-id="9">
+                        <img src="img/iphoneX.jpg" alt="Sản phẩm 9">
+                        <p>Sản phẩm 9</p>
+                        <p class="price">1.000.000 VNĐ</p>
                     </div>
                 </div>
+                
             </div>
 
             <aside>
